# main-api

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.cargo/: config-example
api/: Cargo.toml
api-types/: Cargo.toml
api-types/src/: common.rs  lib.rs  utils.rs  v1.rs
api-types/src/common/: snowflakable.rs  snowflake.rs
api-types/src/v1/: confirm_register.rs  event.rs  event_streams.rs  login.rs  register.rs  sleep_state.rs  token_info.rs
api-types/src/v1/event/: event_type.rs
api-types/src/v1/event_streams/: event_stream_type.rs
api/src/: lib.rs
core/: Cargo.toml
core/src/: mutation.rs  query.rs
crypto/: Cargo.toml
database/: Cargo.toml
database/src/: core.rs  entity.rs  lib.rs  migration.rs
database/src/core/: query.rs
database/src/entity/: event.rs  event_stream.rs  registration.rs  state_change.rs  user.rs  user_token.rs
database/src/migration/: m2023_01_03_001_create_user_table.rs  m2023_01_12_001_create_event_stream_table.rs  m2023_01_13_001_create_event_table.rs  m2023_02_01_001_delete_events_tables.rs  m2023_02_01_delete_events_tables.rs
database/src/security/: token.rs
entity/: Cargo.toml
entity/src/: state_change.rs
mail/: Cargo.toml
mail/src/: delivery.rs  lib.rs
mail/src/templates/: registration.rs
migration/: Cargo.toml
migration/src/: lib.rs  m2023_01_02_001_create_mode_switch_table.rs
migrations/: 20230805151922_recreate_sea-orm_db.sql  20230807142849_add_sleep_state_table.sql
src/: api.rs  core.rs  entity.rs  main.rs  migration.rs  security.rs  v1.rs
src/core/: identifiers.rs  mutation.rs  query.rs
src/entity/: event_stream.rs  registration.rs  user.rs  user_token.rs
src/migration/: m2023_01_02_001_create_mode_switch_table.rs  m2023_01_03_001_create_user_table.rs  m2023_01_03_002_create_user_token_table.rs  m2023_01_04_001_create_registration_table.rs  m2023_01_10_001_delete_mode_switch_table.rs
src/security/: http_auth.rs  password.rs
src/v1/: auth.rs  error.rs  events.rs  sleep.rs
src/v1/auth/: check.rs  confirm_register.rs  login.rs  register.rs  tokens.rs
src/v1/auth/tokens/: delete.rs  get.rs  list.rs
src/v1/events/: create.rs  event_stream.rs  get.rs  list.rs
src/v1/events/event_stream/: create.rs  get.rs  list.rs  patch.rs
src/v1/sleep/: create.rs  delete.rs  get.rs  list.rs  update.rs
