[package]
name = "main-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main-api"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
async-std = { version = "1", features = ["attributes", "tokio1"] }
chrono = { version = "0.4.23", features = ["clock"] }
tokio = { version = "1.23.0", features = ["full"] }
axum = "0.6.1"
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["fs"] }
tower-cookies = "0.8.0"
anyhow = "1.0.66"
dotenvy = "0.15.6"
serde_json = "1.0.89"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing = "0.1.37"
async-trait = "0.1.60"
sea-orm-migration = { version = "0.10.6", features = ["sqlx-sqlite"] }
orion = "0.17.3"
axum-auth = "0.4.0"
rand = "0.8.5"
axum-client-ip = "0.3.0"
axum-macros = "0.3.0"

[dependencies.sea-orm]
version = "0.10.3" # sea-orm version
features = [
    "debug-print",
    "runtime-async-std-native-tls",
    # "sqlx-postgres",
    # "sqlx-mysql",
    "sqlx-sqlite",
]

[dev-dependencies]
tokio = { version = "1.20.0", features = ["macros", "rt"] }
