[package]
name = "main-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    ".",
    "api-types",
    "mail",
    "crypto",
]

[[bin]]
name = "main-api"
path = "src/main.rs"


[dependencies]
serde = { version = "1", features = ["derive"] }
async-std = { version = "1", features = ["attributes", "tokio1"] }
chrono = { version = "0.4.23", features = ["clock"] }
tokio = { version = "1.23.0", features = ["full"] }
axum = { version = "0.6.1", features = ["macros"] }
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["fs", "cors"] }
tower-cookies = "0.8.0"
anyhow = "1.0.66"
dotenvy = "0.15.6"
serde_json = "1.0.89"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing = "0.1.37"
async-trait = "0.1.60"
axum-auth = "0.4.0"
axum-client-ip = "0.3.0"
axum-macros = "0.3.0"
api-types = { path = "api-types", features = ["snowflake_create", "axum_integration", "sqlx_integration"] }
sqlx = { version = "0.6.3", features = ["sqlite", "runtime-tokio-rustls"] }
thiserror = "1.0.38"
mail = { path = "mail" }
crypto = { path = "crypto" }
lettre = { version = "0.10", default-features = false }


[dev-dependencies]
tokio = { version = "1.20.0", features = ["macros", "rt"] }
