[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.89"
async-std = { version = "1", features = ["attributes", "tokio1"] }
chrono = { version = "0.4.23", features = ["clock"] }
tokio = { version = "1.23.0", features = ["full"] }
tracing = "0.1.37"
async-trait = "0.1.60"
sea-orm-migration = { version = "0.10.6", features = ["sqlx-sqlite"] }
api-types = { path = "../api-types", features = ["snowflake_create", "sea_orm_integration", "axum_integration"] }
thiserror = "1.0.38"
rand = "0.8.5"
orion = "0.17.3"


[dependencies.sea-orm]
version = "0.10.3" # sea-orm version
features = [
    "debug-print",
    # "runtime-async-std-native-tls",
    "runtime-async-std-rustls",
    # "sqlx-postgres",
    # "sqlx-mysql",
    "sqlx-sqlite",
]



[dev-dependencies]
tokio = { version = "1.20.0", features = ["macros", "rt"] }
